--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express": "^4.17.1",
     "mongodb": "^3.3.0-beta2",
     "mongoose": "^5.6.7",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "multer": "^1.4.2"
   },
   "devDependencies": {},
   "scripts": {
